[package]
name = "ped"
version = "0.29.0"
edition = "2024"
authors = ["David Edwards <david.l.edwards@gmail.com>"]
description = "The pedestrian text editor"
readme = "README.md"
homepage = "https://github.com/davidledwards/ped"
repository = "https://github.com/davidledwards/ped"
license = "Apache-2.0"

[dependencies]
libc = "0.2"
toml = "0.9"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
arboard = "3.6"

[profile.release]
strip = true
lto = true

[lints.clippy]
len_zero = "allow"
manual_range_contains = "allow"
comparison_chain = "allow"
